# rentals

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  flake.nix  pyproject.toml
app/: settings.py  urls.py
rentals/: admin.py  handlers.py  handlers_test.py  models.py
rentals/api/: models.py  models_factory.py  views.py
rentals/entities/: base.py  entities.py  entities_factory.py
rentals/fixtures/: rentals.json  reservations.json
rentals/migrations/: 0001_initial.py
rentals/repository/: orm.py  repository.py  repository_test.py
rentals/templates/: index.html
scripts/: bootstrap  build  format  lint  setup  start  start-docker  start-prod  test  test-docker  update
static/: script.js  style.css
