[tool.poetry]
name = "rental"
version = "0.1.0"
description = ""
authors = ["Rodrigo Ferreira de Souza <rodfersou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-ninja = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
