[tool.poetry]
name = "rental"
version = "0.1.0"
description = ""
authors = ["Rodrigo Ferreira de Souza <rodfersou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-ninja = "^1.2.1"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-beeprint = "^0.1.2"
polyfactory = "^2.16.2"
pytest-env = "^1.1.3"

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
env = [
  "ENV_TYPE=TEST",
  "D:PYTHONDONTWRITEBYTECODE=1",
]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = "*_test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
